RESOLVED FIXED200021
[macOS 10.15] Web process crashes when attempting to show the font panel via Font > Show Fonts
https://bugs.webkit.org/show_bug.cgi?id=200021
Summary [macOS 10.15] Web process crashes when attempting to show the font panel via ...
Wenson Hsieh
Reported 2019-07-22 17:52:34 PDT
Attachments
Patch (14.83 KB, patch)
2019-07-22 20:57 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-07-22 20:57:06 PDT
WebKit Commit Bot
Comment 2 2019-07-23 07:47:44 PDT
Comment on attachment 374672 [details] Patch Clearing flags on attachment: 374672 Committed r247722: <https://trac.webkit.org/changeset/247722>
WebKit Commit Bot
Comment 3 2019-07-23 07:47:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.