Source/WebCore/loader/EmptyClients.cpp
@@ -268,6 +268,8 @@ private:
     void willSetInputMethodState() final { }
     void setInputMethodState(bool) final { }
 
+    bool canShowFontPanel() const final { return false; }
+
     class EmptyTextCheckerClient final : public TextCheckerClient {
         bool shouldEraseMarkersAfterChangeSelection(TextCheckingType) const final { return true; }
         void ignoreWordInSpellDocument(const String&) final { }
